# remo

./: CMakeLists.txt  README.md
clients/: README.md
clients/cpp/: CMakeLists.txt
clients/cpp/rpc/: CMakeLists.txt  README.md  json_rpc_client.cpp  json_rpc_client.hpp  main.cpp
clients/cpp/websockets/: CMakeLists.txt  README.md  json_ws_client.cpp  json_ws_client.hpp  main.cpp
clients/js/: README.md  example.html  remo_client.js
clients/python/rpc/: README.md  json_rpc_client.py
clients/python/websockets/: README.md  websocket_client.py
cmake/: RemoConfig.cmake.in
docs/: _config.yml  build_and_install.md  index.md  rpc_guide.md  websocket_guide.md
examples/: CMakeLists.txt
examples/publisher_application/: CMakeLists.txt  main.cpp  test_client.html
examples/rpc_application/: CMakeLists.txt  README.md  main.cpp  rpc_application.hpp  rpc_json_adapters.hpp  test.sh
lib/: CMakeLists.txt
lib/rpc/: CMakeLists.txt  beast_rpc_server.cpp  beast_rpc_server.hpp
lib/websocket/: CMakeLists.txt  beast_websocket_publisher.cpp  beast_websocket_publisher.hpp
